--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.2",
     "react-redux": "^9.0.4",
     "react-router": "6.3.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "^5.0.1",
-    "redux": "^4.2.0"
+    "react-toastify": "^9.1.3",
+    "redux": "^4.2.0",
+    "swiper": "^11.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
